# touhou

./: .gitignore  CMakeLists.txt
src/: game.cc  game.h  graphics.cc  graphics.h  input.cc  input.h  main.cc  player.cc  player.h  player_animation.cc  sdl_engine.h  sprite.cc  sprite.h  sprite_state.cc  sprite_state.h  timer.cc  timer.h  vec.h
